--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,27 +9,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 코드 체크아웃
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Node.js 설치
+      - name: Show folder structure
+        run: ls -R
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 3. 의존성 설치
       - name: Install dependencies
         working-directory: board-front
         run: npm install
 
-      # 4. 빌드 실행
       - name: Build project
         working-directory: board-front
         run: npm run build
 
-      # 5. AWS 인증
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -37,13 +35,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      # 6. S3 기존 파일 삭제 후 새 빌드 업로드
       - name: Deploy to S3
         run: |
           aws s3 rm s3://juhyeonbucket --recursive
-          aws s3 cp ./board-front/dist s3:juhyeonbucket //juhyeonbucket/ --recursive
+          aws s3 cp ./board-front/dist s3://juhyeonbucket --recursive
 
-      # 7. CloudFront 캐시 무효화
       - name: Invalidate CloudFront
         run: |
           aws cloudfront create-invalidation \
