--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          path: .
 
       - name: Show folder structure
-        run: ls -R
+        run: ls -alR
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
