--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          path: .
 
       - name: Show folder structure
         run: ls -alR
@@ -23,12 +21,14 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        working-directory: board-front
-        run: npm install
+        run: |
+          cd board-front
+          npm install
 
       - name: Build project
-        working-directory: board-front
-        run: npm run build
+        run: |
+          cd board-front
+          npm run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
