--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ap-northeast-2
-          aws-access-key-id: ${{ secrets.JUHYEON_ACCESS_KEY_ID }}
+          aws-access-key-id: ${{ secrets.JUHYEON_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.JUHYEON_SECRET_ACCESS_KEY }}
 
       - name: Deploy to S3
